@@ -185,6 +185,7 @@
                         <trimStackTrace>false</trimStackTrace>
                         <reuseForks>true</reuseForks>
                         <forkCount>1</forkCount>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 <!--                        <parallel>classesAndMethods</parallel>-->
 <!--                        <threadCount>5</threadCount>-->
 <!--                        <skipTests>${skipImplTests}</skipTests>-->
